src/test/deca/context/invalid/resultats/test_class_inexistent-cont.res
./src/test/deca/context/invalid/test_class_inexistent.deca:15:1: Type identifier A is not declared. 
